--- a/Homework 3 Example 2.ipynb
+++ b/Homework 3 Example 2.ipynb
@@ -21,11 +21,20 @@
       "version": "3.6.3"
     },
     "colab": {
-      "name": "Ragan Jimmy 2_notebook.ipynb",
+      "name": "Test Notebook",
       "provenance": []
     }
   },
-  "cells": [
+  "cells": [{
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/treyra/CS155_miniproject/edit/master/Homework 3 Example 2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
