--- a/Homework 3 Example 2.ipynb
+++ b/Homework 3 Example 2.ipynb
@@ -22,17 +22,19 @@
     },
     "colab": {
       "name": "Test Notebook",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
-  "cells": [{
+  "cells": [
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "view-in-github",
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/treyra/CS155_miniproject/blob/master/Homework 3 Example 2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/treyra/CS155_miniproject/blob/master/Homework%203%20Example%202.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +43,7 @@
         "id": "WF1crkj-DTKO"
       },
       "source": [
-        "# TEST"
+        "# TEST TEST"
       ]
     },
     {
