--- a/Data_Imputation.ipynb
+++ b/Data_Imputation.ipynb
@@ -23,6 +23,7 @@
     "colab": {
       "name": "Data Imputation",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -1456,10 +1457,224 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VE8m0uBtDSnZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VE8m0uBtDSnZ",
+        "outputId": "9345b898-2218-4ab0-86c9-4d70a2bedeb7"
       },
       "source": [
-        "# then impute discovery time from ??? year + season + label ???"
+        "# then impute discovery time from ??? year + season + label ???\n",
+        "# convert date column into 2 columns - year and day of the year\n",
+        "import datetime \n",
+        "dates = pd.DataFrame({'DATE':df['DATE']})\n",
+        "df.dtypes\n",
+        "dates['DATE'] = pd.to_datetime(dates['DATE'])\n",
+        "year = np.zeros(len(dates['DATE']))\n",
+        "day = np.zeros(len(dates['DATE']))\n",
+        "for i in range(0,len(dates['DATE'])):\n",
+        "  timetuple = dates['DATE'][:][i].timetuple()\n",
+        "  year[i] = timetuple.tm_year\n",
+        "  day[i] = timetuple.tm_yday\n",
+        "print(year)\n",
+        "print(day)"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1992. 1992. 1992. ... 2009. 2009. 2009.]\n",
+            "[  1.   1.   1. ... 364. 364. 365.]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "IRCRPWQoXSVC",
+        "outputId": "112ac155-cbb9-4ab6-c141-867b02f5de73"
+      },
+      "source": [
+        "# add to dataframe\n",
+        "df.insert(9,'YEAR',year)\n",
+        "df.insert(10,'DAY',day)\n",
+        "df = df.drop(['DATE'],axis=1)\n",
+        "df.head()"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>LATITUDE</th>\n",
+              "      <th>LONGITUDE</th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DISCOVERY_TIME</th>\n",
+              "      <th>FIRE_SIZE</th>\n",
+              "      <th>FIPS_NAME</th>\n",
+              "      <th>FIPS_CODE</th>\n",
+              "      <th>SOURCE_REPORTING_UNIT_NAME</th>\n",
+              "      <th>YEAR</th>\n",
+              "      <th>DAY</th>\n",
+              "      <th>LABEL</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>38.205000</td>\n",
+              "      <td>-120.335000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>130.0</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>192.0</td>\n",
+              "      <td>9.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1992.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>33.813100</td>\n",
+              "      <td>-85.104300</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1115.0</td>\n",
+              "      <td>1.17</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>143.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1992.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>32.201000</td>\n",
+              "      <td>-82.498700</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1600.0</td>\n",
+              "      <td>0.07</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>209.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1992.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>32.509300</td>\n",
+              "      <td>-81.708600</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1215.0</td>\n",
+              "      <td>4.40</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>31.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1992.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>33.663889</td>\n",
+              "      <td>-116.171944</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.20</td>\n",
+              "      <td>168.0</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1992.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   id   LATITUDE   LONGITUDE  ...    YEAR  DAY  LABEL\n",
+              "0   0  38.205000 -120.335000  ...  1992.0  1.0      1\n",
+              "1   1  33.813100  -85.104300  ...  1992.0  1.0      4\n",
+              "2   2  32.201000  -82.498700  ...  1992.0  1.0      2\n",
+              "3   3  32.509300  -81.708600  ...  1992.0  1.0      4\n",
+              "4   4  33.663889 -116.171944  ...  1992.0  1.0      2\n",
+              "\n",
+              "[5 rows x 12 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5iv83cL8ZCB0",
+        "outputId": "a2bbd8d6-be86-4033-bf01-c1bc37a48fbe"
+      },
+      "source": [
+        "save_csv(df_imputed,'traindata_fipsname_code_imputed_year_day')"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UP5ASB9caOLa"
+      },
+      "source": [
+        "# normalize data tbd how\n",
+        "# impute discovery time from ?? - year/day/state/fips_code?"
       ],
       "execution_count": null,
       "outputs": []
@@ -1467,12 +1682,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 358
-        },
-        "id": "yBmAW_GuqabH",
-        "outputId": "98efa316-125b-420c-ff67-9f648b2bf656"
+        "id": "yBmAW_GuqabH"
       },
       "source": [
         "# ALL IN ONE - TOO SLOW !!! and probs not too useful\n",
@@ -1484,28 +1694,10 @@
         "# from sklearn.impute import KNNImputer\n",
         "# imputer = KNNImputer(n_neighbors=2)\n",
         "# imputer.fit_transform(df3)\n",
-        "# df3.head()\n",
-        "\n",
-        "# should we split the data up into years and seasons/months??"
+        "# df3.head()\n"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-f350aabde1dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimpute\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKNNImputer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mimputer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKNNImputer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mimputer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mdf3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m             \u001b[0;31m# fit method of arity 1 (unsupervised transformation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfit_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m             \u001b[0;31m# fit method of arity 2 (supervised transformation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/impute/_knn.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    291\u001b[0m             \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_all_finite\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    292\u001b[0m             reduce_func=process_chunk)\n\u001b[0;32m--> 293\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    294\u001b[0m             \u001b[0;31m# process_chunk modifies X in place. No return value.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mpairwise_distances_chunked\u001b[0;34m(X, Y, reduce_func, metric, n_jobs, working_memory, **kwds)\u001b[0m\n\u001b[1;32m   1602\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreduce_func\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1603\u001b[0m             \u001b[0mchunk_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_chunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1604\u001b[0;31m             \u001b[0mD_chunk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreduce_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_chunk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1605\u001b[0m             \u001b[0m_check_chunk_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_chunk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunk_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1606\u001b[0m         \u001b[0;32myield\u001b[0m \u001b[0mD_chunk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/impute/_knn.py\u001b[0m in \u001b[0;36mprocess_chunk\u001b[0;34m(dist_chunk, start)\u001b[0m\n\u001b[1;32m    253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m                 \u001b[0;31m# distances for samples that needed imputation for column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 255\u001b[0;31m                 dist_subset = (dist_chunk[dist_idx_map[receivers_idx] - start]\n\u001b[0m\u001b[1;32m    256\u001b[0m                                [:, potential_donors_idx])\n\u001b[1;32m    257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
+      "execution_count": 59,
+      "outputs": []
     }
   ]
 }
