--- a/data_normalization.ipynb
+++ b/data_normalization.ipynb
@@ -6,7 +6,7 @@
       "name": "data_normalization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOe2OHDXJWpFmRV927AiHnW",
+      "authorship_tag": "ABX9TyOt4hOINqH9gLkOF5ToIrNF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
           "height": 204
         },
         "id": "hnxQWHzuXf-S",
-        "outputId": "0fb9a7b8-f489-4c36-b10a-752d37c65a11"
+        "outputId": "82d7a685-f686-4f60-ee42-bf223d6b39a1"
       },
       "source": [
         "# Normalize prepared data\n",
@@ -62,6 +62,8 @@
         "test_df = pd.read_csv('https://raw.githubusercontent.com/treyra/CS155_miniproject/data_visualization_v1/data_cleanup/testdata_imputed.csv',sep=',', header=0,index_col=0)\n",
         "train_df = pd.read_csv('https://raw.githubusercontent.com/treyra/CS155_miniproject/data_visualization_v1/data_cleanup/traindata_imputed.csv',sep=',', header=0,index_col=0)\n",
         "# normalize data\n",
+        "test_df.head()\n",
+        "\n",
         "#--- First stuff with same scale\n",
         "# change state categogy 2 to 0 - states in [0,1]\n",
         "train_df['STATE']=train_df['STATE'].replace([2],0)\n",
@@ -106,7 +108,7 @@
         "traindata_normalized_minmax['LONGITUDE']=traindata_minmax[:,1]\n",
         "traindata_normalized_minmax['FIRE_SIZE']=traindata_minmax[:,2]\n",
         "traindata_normalized_minmax['FIPS_NAME']=traindata_minmax[:,3]\n",
-        "traindata_normalized_minmax['FIRE_CODE']=traindata_minmax[:,4]\n",
+        "traindata_normalized_minmax['FIPS_CODE']=traindata_minmax[:,4]\n",
         "traindata_normalized_minmax['SOURCE_REPORTING_UNIT_NAME']=traindata_minmax[:,5]\n",
         "#\n",
         "traindata_normalized_robust = train_df\n",
@@ -114,7 +116,7 @@
         "traindata_normalized_robust['LONGITUDE']=traindata_robust[:,1]\n",
         "traindata_normalized_robust['FIRE_SIZE']=traindata_robust[:,2]\n",
         "traindata_normalized_robust['FIPS_NAME']=traindata_robust[:,3]\n",
-        "traindata_normalized_robust['FIRE_CODE']=traindata_robust[:,4]\n",
+        "traindata_normalized_robust['FIPS_CODE']=traindata_robust[:,4]\n",
         "traindata_normalized_robust['SOURCE_REPORTING_UNIT_NAME']=traindata_robust[:,5]\n",
         "#\n",
         "traindata_normalized_standard = train_df\n",
@@ -122,7 +124,7 @@
         "traindata_normalized_standard['LONGITUDE']=traindata_standard[:,1]\n",
         "traindata_normalized_standard['FIRE_SIZE']=traindata_standard[:,2]\n",
         "traindata_normalized_standard['FIPS_NAME']=traindata_standard[:,3]\n",
-        "traindata_normalized_standard['FIRE_CODE']=traindata_standard[:,4]\n",
+        "traindata_normalized_standard['FIPS_CODE']=traindata_standard[:,4]\n",
         "traindata_normalized_standard['SOURCE_REPORTING_UNIT_NAME']=traindata_standard[:,5]\n",
         "# testdata\n",
         "testdata_normalized_minmax = test_df\n",
@@ -130,7 +132,7 @@
         "testdata_normalized_minmax['LONGITUDE']=testdata_minmax[:,1]\n",
         "testdata_normalized_minmax['FIRE_SIZE']=testdata_minmax[:,2]\n",
         "testdata_normalized_minmax['FIPS_NAME']=testdata_minmax[:,3]\n",
-        "testdata_normalized_minmax['FIRE_CODE']=testdata_minmax[:,4]\n",
+        "testdata_normalized_minmax['FIPS_CODE']=testdata_minmax[:,4]\n",
         "testdata_normalized_minmax['SOURCE_REPORTING_UNIT_NAME']=testdata_minmax[:,5]\n",
         "#\n",
         "testdata_normalized_robust = test_df\n",
@@ -138,7 +140,7 @@
         "testdata_normalized_robust['LONGITUDE']=testdata_robust[:,1]\n",
         "testdata_normalized_robust['FIRE_SIZE']=testdata_robust[:,2]\n",
         "testdata_normalized_robust['FIPS_NAME']=testdata_robust[:,3]\n",
-        "testdata_normalized_robust['FIRE_CODE']=testdata_robust[:,4]\n",
+        "testdata_normalized_robust['FIPS_CODE']=testdata_robust[:,4]\n",
         "testdata_normalized_robust['SOURCE_REPORTING_UNIT_NAME']=testdata_robust[:,5]\n",
         "#\n",
         "testdata_normalized_standard = test_df\n",
@@ -146,12 +148,12 @@
         "testdata_normalized_standard['LONGITUDE']=testdata_standard[:,1]\n",
         "testdata_normalized_standard['FIRE_SIZE']=testdata_standard[:,2]\n",
         "testdata_normalized_standard['FIPS_NAME']=testdata_standard[:,3]\n",
-        "testdata_normalized_standard['FIRE_CODE']=testdata_standard[:,4]\n",
+        "testdata_normalized_standard['FIPS_CODE']=testdata_standard[:,4]\n",
         "testdata_normalized_standard['SOURCE_REPORTING_UNIT_NAME']=testdata_standard[:,5]\n",
         "#\n",
         "traindata_normalized_minmax.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +189,6 @@
               "      <th>YEAR</th>\n",
               "      <th>DAY</th>\n",
               "      <th>LABEL</th>\n",
-              "      <th>FIRE_CODE</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -200,12 +201,11 @@
               "      <td>0.054167</td>\n",
               "      <td>-0.026526</td>\n",
               "      <td>1.048773</td>\n",
-              "      <td>9.0</td>\n",
+              "      <td>-1.143120</td>\n",
               "      <td>-0.871063</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>1</td>\n",
-              "      <td>-1.143120</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -216,12 +216,11 @@
               "      <td>0.464583</td>\n",
               "      <td>-0.025770</td>\n",
               "      <td>-1.922012</td>\n",
-              "      <td>143.0</td>\n",
+              "      <td>0.386764</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>4</td>\n",
-              "      <td>0.386764</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -232,12 +231,11 @@
               "      <td>0.666667</td>\n",
               "      <td>-0.026547</td>\n",
               "      <td>-1.906459</td>\n",
-              "      <td>209.0</td>\n",
+              "      <td>1.140289</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>2</td>\n",
-              "      <td>1.140289</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -248,12 +246,11 @@
               "      <td>0.506250</td>\n",
               "      <td>-0.023489</td>\n",
               "      <td>-1.890905</td>\n",
-              "      <td>31.0</td>\n",
+              "      <td>-0.891945</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>4</td>\n",
-              "      <td>-0.891945</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -264,32 +261,31 @@
               "      <td>0.549583</td>\n",
               "      <td>-0.026456</td>\n",
               "      <td>0.675480</td>\n",
-              "      <td>65.0</td>\n",
+              "      <td>-0.503766</td>\n",
               "      <td>-0.833245</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>2</td>\n",
-              "      <td>-0.503766</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   id  LATITUDE  LONGITUDE  STATE  ...  YEAR       DAY  LABEL  FIRE_CODE\n",
-              "0   0  0.988292  -0.985738      1  ...   0.0  0.002732      1  -1.143120\n",
-              "1   1 -0.401537   0.925104      0  ...   0.0  0.002732      4   0.386764\n",
-              "2   2 -0.911691   1.066427      0  ...   0.0  0.002732      2   1.140289\n",
-              "3   3 -0.814128   1.109280      0  ...   0.0  0.002732      4  -0.891945\n",
-              "4   4 -0.448755  -0.759942      1  ...   0.0  0.002732      2  -0.503766\n",
+              "   id  LATITUDE  LONGITUDE  ...  YEAR       DAY  LABEL\n",
+              "0   0  0.988292  -0.985738  ...   0.0  0.002732      1\n",
+              "1   1 -0.401537   0.925104  ...   0.0  0.002732      4\n",
+              "2   2 -0.911691   1.066427  ...   0.0  0.002732      2\n",
+              "3   3 -0.814128   1.109280  ...   0.0  0.002732      4\n",
+              "4   4 -0.448755  -0.759942  ...   0.0  0.002732      2\n",
               "\n",
-              "[5 rows x 13 columns]"
+              "[5 rows x 12 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -298,10 +294,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 204
         },
         "id": "_4MmzZ4ocSSy",
-        "outputId": "878d696f-ac3f-4ad8-e45c-b76e16fecc4c"
+        "outputId": "449b954e-8ccd-4e94-d8f7-48c79ddad930"
       },
       "source": [
         "# adding one hot encoding for training data\n",
@@ -317,7 +313,7 @@
         "traindata_normalized_standard = traindata_normalized_standard.join(enc_df)\n",
         "traindata_normalized_minmax.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +349,6 @@
               "      <th>YEAR</th>\n",
               "      <th>DAY</th>\n",
               "      <th>LABEL</th>\n",
-              "      <th>FIRE_CODE</th>\n",
               "      <th>0</th>\n",
               "      <th>1</th>\n",
               "      <th>2</th>\n",
@@ -370,12 +365,11 @@
               "      <td>0.054167</td>\n",
               "      <td>-0.026526</td>\n",
               "      <td>1.048773</td>\n",
-              "      <td>9.0</td>\n",
+              "      <td>-1.143120</td>\n",
               "      <td>-0.871063</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>1</td>\n",
-              "      <td>-1.143120</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
@@ -390,12 +384,11 @@
               "      <td>0.464583</td>\n",
               "      <td>-0.025770</td>\n",
               "      <td>-1.922012</td>\n",
-              "      <td>143.0</td>\n",
+              "      <td>0.386764</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>4</td>\n",
-              "      <td>0.386764</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
@@ -410,12 +403,11 @@
               "      <td>0.666667</td>\n",
               "      <td>-0.026547</td>\n",
               "      <td>-1.906459</td>\n",
-              "      <td>209.0</td>\n",
+              "      <td>1.140289</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>2</td>\n",
-              "      <td>1.140289</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
@@ -430,12 +422,11 @@
               "      <td>0.506250</td>\n",
               "      <td>-0.023489</td>\n",
               "      <td>-1.890905</td>\n",
-              "      <td>31.0</td>\n",
+              "      <td>-0.891945</td>\n",
               "      <td>-0.852154</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>4</td>\n",
-              "      <td>-0.891945</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
@@ -450,12 +441,11 @@
               "      <td>0.549583</td>\n",
               "      <td>-0.026456</td>\n",
               "      <td>0.675480</td>\n",
-              "      <td>65.0</td>\n",
+              "      <td>-0.503766</td>\n",
               "      <td>-0.833245</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.002732</td>\n",
               "      <td>2</td>\n",
-              "      <td>-0.503766</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
@@ -466,20 +456,20 @@
               "</div>"
             ],
             "text/plain": [
-              "   id  LATITUDE  LONGITUDE  STATE  ...    0    1    2    3\n",
-              "0   0  0.988292  -0.985738      1  ...  1.0  0.0  0.0  0.0\n",
-              "1   1 -0.401537   0.925104      0  ...  0.0  0.0  0.0  1.0\n",
-              "2   2 -0.911691   1.066427      0  ...  0.0  1.0  0.0  0.0\n",
-              "3   3 -0.814128   1.109280      0  ...  0.0  0.0  0.0  1.0\n",
-              "4   4 -0.448755  -0.759942      1  ...  0.0  1.0  0.0  0.0\n",
+              "   id  LATITUDE  LONGITUDE  STATE  DISCOVERY_TIME  ...  LABEL    0    1    2    3\n",
+              "0   0  0.988292  -0.985738      1        0.054167  ...      1  1.0  0.0  0.0  0.0\n",
+              "1   1 -0.401537   0.925104      0        0.464583  ...      4  0.0  0.0  0.0  1.0\n",
+              "2   2 -0.911691   1.066427      0        0.666667  ...      2  0.0  1.0  0.0  0.0\n",
+              "3   3 -0.814128   1.109280      0        0.506250  ...      4  0.0  0.0  0.0  1.0\n",
+              "4   4 -0.448755  -0.759942      1        0.549583  ...      2  0.0  1.0  0.0  0.0\n",
               "\n",
-              "[5 rows x 17 columns]"
+              "[5 rows x 16 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 4
         }
       ]
     },
@@ -490,7 +480,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaPpiu93c6Di",
-        "outputId": "52898163-be0f-414e-a643-604372af6c2e"
+        "outputId": "723d75ac-f1ce-4e4b-b610-fedddb0ae6c0"
       },
       "source": [
         "# put it together in a dataframe and save\n",
@@ -507,7 +497,7 @@
         "save_csv(traindata_normalized_robust, 'testdata_imputed_normalized_robust')\n",
         "save_csv(traindata_normalized_standard, 'testdata_imputed_normalized_standard')\n"
       ],
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
